# kiwi-app

./: .env  .env.production  .gitignore  package-lock.json  package.json  sync-version.js  tauri.windows.conf.json  tsconfig.json  vite.config.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/assets/: .gitignore
src-tauri/assets/app/: config.toml
src-tauri/assets/python/: .gitignore
src-tauri/assets/python/project_template/: main.py
src-tauri/assets/resources/python_interpreter_macos/include/python3.13/: pyconfig.h
src-tauri/assets/resources/python_interpreter_windows/: LICENSE.txt
src-tauri/assets/resources/python_interpreter_windows/DLLs/: _asyncio.pyd  _bz2.pyd  _ctypes.pyd  _ctypes_test.pyd  _decimal.pyd  _elementtree.pyd  _hashlib.pyd  _lzma.pyd  _multiprocessing.pyd  _overlapped.pyd  _queue.pyd  _socket.pyd  _sqlite3.pyd  _ssl.pyd  _testbuffer.pyd  _testcapi.pyd  _testclinic.pyd  _testclinic_limited.pyd  _testconsole.pyd  _testimportmultiple.pyd  _testinternalcapi.pyd  _testlimitedcapi.pyd  _testmultiphase.pyd  _testsinglephase.pyd  _tkinter.pyd  _uuid.pyd  _wmi.pyd  _zoneinfo.pyd  pyexpat.pyd  select.pyd  unicodedata.pyd  winsound.pyd
src-tauri/assets/windows/: hooks.nsi
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: en-US.json  zh-CN.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: app.rs  config.rs  log.rs  mod.rs
src-tauri/src/capture/: engine.rs  mod.rs
src-tauri/src/capture/frame/: color.rs  frame.rs  image.rs  mod.rs  text.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/frontend/: app.rs  capture.rs  code.rs  common.rs  frame.rs  mod.rs  project.rs  result.rs  utils.rs
src-tauri/src/commands/websocket/: frame.rs  input.rs  mod.rs  utils.rs
src-tauri/src/extensions/: app_handle.rs  embedded_file.rs  image_buffer.rs  mat.rs  mod.rs
src-tauri/src/input/: engine.rs  key.rs  mod.rs
src-tauri/src/interpreter/: code.rs  interpreter.rs  mod.rs
src-tauri/src/interpreter/python/: code.rs  engine.rs  key.rs  mod.rs  pyproject.rs  token_ext.rs
src-tauri/src/project/: config.rs  project.rs
src-tauri/src/record/: engine.rs  key.rs  macos.rs  mod.rs
src-tauri/src/types/: asset.rs  base64_png.rs  colored_point.rs  emit.rs  hex_color.rs  limited_queue.rs  mod.rs  point.rs  progress.rs  rgb_color.rs  rgb_offset.rs  size.rs  weight.rs  weight_point.rs
src-tauri/src/utils/: common.rs
src-tauri/src/websocket/: core.rs  message.rs  mod.rs
(+57 files in other folders)
